Cannot clear a MediaSource SourceBuffer in Safari 9 and WebKit nightly https://bugs.webkit.org/show_bug.cgi?id=159230

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/media-source/media-source-remove.html (modified)

Move to using a MediaTime directly (rather than as a double) to add
and removed buffered ranges. Also, drop the use of the "microsecond"
fudge factor when adding buffered ranges.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::removeSamplesFromTrackBuffer):
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveSample):

LayoutTests:

* media/media-source/media-source-remove.html:
* media/media-source/media-source-remove-expected.txt:


Canonical link: https://commits.webkit.org/177385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202641 268f45cc-cd09-0410-ab3c-d52691b4dbfc